# Korgi

./: .gitignore  README.md  pyproject.toml
korgi/: cli.py  config.py  pipeline.py
korgi/characters/: default_en.yaml  default_ja.yaml  loader.py  ponchon.yaml  schema.py
korgi/io/: run_dir.py
korgi/llm/: client.py
korgi/llm/prompts/: fact_check_speech.md  slide_cues.md  slides_en.md  slides_ja.md  speech_en.md  speech_ja.md  tag_inject.md
korgi/pdf/: to_markdown.py
korgi/resume/: fact_check.py  generator.py  skill_loader.py
korgi/slides/: generator.py  render.py  timing.py
korgi/speech/: draft.py  fact_check.py  schema.py  slide_cues.py  tags.py
korgi/tts/: base.py  elevenlabs_v3.py  irodori.py  moss_tts_nano.py  registry.py  stub.py  tag_translate.py  voices.yaml  voxcpm.py
korgi/web/: server.py
tests/: test_characters.py  test_fact_check.py  test_pdf.py  test_resume.py  test_slides.py  test_speech_draft.py  test_speech_tags.py  test_tts_translate.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  types.ts
web/src/live2d/: expressions.ts  lipsync.ts  loader.ts
web/src/player/: timeline.ts
web/src/ui/: player.ts  progress.ts  setup.ts  slides.ts
