[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korgi"
version = "0.0.1"
description = "Cute AI TAs giving you lectures"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.40",
    "markitdown[all]>=0.0.1a",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.0"]
voxcpm = ["voxcpm"]
irodori = ["irodori-tts"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
dev = ["pytest>=8", "pytest-mock>=3"]
moss = ["moss-tts-nano"]

[tool.uv]
# moss, voxcpm, and irodori each pin different torch versions and are never
# installed together — install one at a time with `uv sync --extra <name>`.
conflicts = [
  [{ extra = "moss" }, { extra = "irodori" }, { extra = "voxcpm" }],
]

[tool.uv.sources]
voxcpm = { path = "../TTS/VoxCPM", editable = true }
irodori-tts = { path = "../TTS/Irodori-TTS", editable = true }
moss-tts-nano = { path = "../TTS/MOSS-TTS-Nano", editable = true }

[project.scripts]
korgi = "korgi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["korgi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
